--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "email-validator": "^2.0.4",
     "evergreen-ui": "^5.1.2",
     "firebase": "^7.24.0",
-    "framer-motion": "^2.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-form": "^4.0.1",
@@ -76,7 +78,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.14.0",
+    "axios": "^0.21.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "lint-staged": "^10.5.1",
